# norns-ugen-cross

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cross  Dockerfile.cross-pi  README.md  build.sh
mysaw/: MySaw.lua
mysaw/lib/: Engine_MySaw.sc  mysaw_engine.lua
src/my_saw/: MySaw.cpp  MySaw.sc
